k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonapp
  namespace: pythonapp
spec:
  type: ClusterIP
  selector:
    app: pythonapp
  ports:
    - port: 80
      targetPort: 8000
